Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71669

REG->5.12Beta4: Quick QML nanobrowser warns: Settings: Failed to initialize QSettings instance. Status code is: 1

XMLWordPrintable

    • Linux/X11, Windows
    • cfe53bce924e40c944850fd0418d53c8ba760dc1 (qt/qtwebengine/5.12)

      Run the webengine/quicknanobrowser example, note

      qrc:/BrowserWindow.qml:81:5: QML Settings: Failed to initialize QSettings instance. Status code is: 1
      qrc:/BrowserWindow.qml:81:5: QML Settings: The following application identifiers have not been set: QVector("organizationName", "organizationDomain")
      

        For Gerrit Dashboard: QTBUG-71669
        # Subject Branch Project Status CR V

            juri.valdmann Jüri Valdmann (Inactive)
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes