Set organizationName of all examples to QtExamples

Group directories under ~/.cache and ~/.config.

Fixes: QTBUG-71669
Change-Id: Ia55aeab8c0e38f58afcbda128f04fd3d85c3df5e
Reviewed-by: Michal Klocek <michal.klocek@qt.io>