examples/webengine/minimal/main.cpp
@@ -54,6 +54,7 @@
 
 int main(int argc, char *argv[])
 {
+    QCoreApplication::setOrganizationName("QtExamples");
     QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
     QGuiApplication app(argc, argv);
 
