examples/webenginewidgets/simplebrowser/main.cpp
@@ -66,6 +66,7 @@ QUrl commandLineUrlArgument()
 
 int main(int argc, char **argv)
 {
+    QCoreApplication::setOrganizationName("QtExamples");
     QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
     QCoreApplication::setAttribute(Qt::AA_UseHighDpiPixmaps);
 
